--- a/infractions/polls/templates/polls/index.html
+++ b/infractions/polls/templates/polls/index.html
@@ -1,16 +1,10 @@
-<h1>Movielist</h1>
-<br/>
+<h1>infractions</h1>
+<br />
 <ul>
-    {% for m in movie_name %}
-        <li><a href='/polls/{{ m }}/'>{{m}}</a></li>
-    {% endfor %}
+  {% for i in infractions %}
+  <li>
+    <a href="/polls/{{ i }}/">{{ i }}</a>
+  </li>
+  {% endfor %}
 </ul>
-
-<h1>Search Quotes</h1>
-
-<form action='{% url 'polls:search_movie' %}' method='POST'>
-{% csrf_token %}
-<label for = 'search_term'>Your Search : </label>
-<input id='search_term' type='text' name='search_term''>
-<input type='submit' value='Search' />
-</form>
+<h1>List of searched infractions</h1>
